<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title" >

    <ListPreference
        android:defaultValue="@string/settings_order_by_publication_date_default"
        android:entries="@array/settings_order_by_publication_date_labels"
        android:entryValues="@array/settings_order_by_publication_date_values"
        android:key="@string/settings_order_by_publication_date_key"
        android:title="@string/settings_order_by_publication_date_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_edition_default"
        android:entries="@array/settings_order_by_edition_labels"
        android:entryValues="@array/settings_order_by_edition_values"
        android:key="@string/settings_order_by_edition_key"
        android:title="@string/settings_order_by_edition_label" />

</PreferenceScreen>
